fix(users): remove roles
